--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1"
+        "@inertiajs/inertia": "^0.11.1",
+        "vuedraggable": "^4.1.0"
     }
 }
